Modelを実装（設定ファイルの読み込みは未実装）

--- a/MiniRisViewer/Views/MainWindow.xaml
+++ b/MiniRisViewer/Views/MainWindow.xaml
@@ -5,6 +5,10 @@
         prism:ViewModelLocator.AutoWireViewModel="True"
         Title="{Binding Title}" Height="350" Width="525">
     <Grid>
-        <ContentControl prism:RegionManager.RegionName="ContentRegion" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="372*"/>
+            <ColumnDefinition Width="145*"/>
+        </Grid.ColumnDefinitions>
+        <ContentControl prism:RegionManager.RegionName="ContentRegion" Grid.ColumnSpan="2" />
     </Grid>
 </Window>
