--- a/MiniRisViewer.ServiceStatus/Views/ServiceStatusView.xaml
+++ b/MiniRisViewer.ServiceStatus/Views/ServiceStatusView.xaml
@@ -3,12 +3,17 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:MiniRisViewer.ServiceStatus.ViewModels"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
+
+    <UserControl.DataContext>
+        <local:ServiceStatusViewModel />
+    </UserControl.DataContext>
     <Grid>
         <DockPanel>
             <StackPanel
@@ -16,15 +21,28 @@
                 DockPanel.Dock="Top"
                 Orientation="Horizontal">
                 <TextBlock Text="時間:" />
-                <TextBlock Text="{Binding ReadOnlyReactiveTimer.Value}" />
+                <TextBlock Text="{Binding ScreenSynchronousTimer}" />
+
             </StackPanel>
             <GroupBox
                 Margin="10"
                 DockPanel.Dock="Top"
                 Header="サービス稼働状況">
-                <TextBlock>
-                    My Content
-                </TextBlock>
+                <StackPanel
+                    VerticalAlignment="Top"
+                    DockPanel.Dock="Top"
+                    Orientation="Vertical">
+                    <TextBlock Text="FileImporter" />
+                    <TextBlock Text="{Binding ImporterStatus.Value}" />
+                    <TextBlock Text="MWMResponder" />
+                    <TextBlock Text="{Binding ResponderStatus.Value}" />
+                    <TextBlock Text="ScpCore" />
+                    <TextBlock Text="{Binding ScpCoreStatus.Value}" />
+                    <TextBlock Text="Asc" />
+                    <TextBlock Text="{Binding AscStatus.Value}" />
+                    <TextBlock Text="MppsReceiver" />
+                    <TextBlock Text="{Binding MppsStatus.Value}" />
+                </StackPanel>
             </GroupBox>
             <StackPanel
                 VerticalAlignment="Top"
@@ -40,8 +58,8 @@
                     Content="PAUSE" />
                 <Button
                     Margin="5"
-                    Command="{Binding RebootCommand}"
-                    Content="端末再起動" />
+                    Command="{Binding RestartServiceCommand}"
+                    Content="全てのサービスを再起動" />
             </StackPanel>
         </DockPanel>
     </Grid>
