--- a/MiniRisViewer/Views/MainWindow.xaml
+++ b/MiniRisViewer/Views/MainWindow.xaml
@@ -1,14 +1,18 @@
-﻿<Window x:Class="MiniRisViewer.Views.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:prism="http://prismlibrary.com/"
-        prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="350" Width="525">
+﻿<controls:MetroWindow
+    x:Class="MiniRisViewer.Views.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:prism="http://prismlibrary.com/"
+    Title="{Binding Title}"
+    Width="525"
+    Height="350"
+    prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="372*"/>
-            <ColumnDefinition Width="145*"/>
+            <ColumnDefinition Width="372*" />
+            <ColumnDefinition Width="145*" />
         </Grid.ColumnDefinitions>
-        <ContentControl prism:RegionManager.RegionName="ContentRegion" Grid.ColumnSpan="2" />
+        <ContentControl Grid.ColumnSpan="2" prism:RegionManager.RegionName="ContentRegion" />
     </Grid>
-</Window>
+</controls:MetroWindow>
