--- a/MiniRisViewer.ServiceStatus/Views/ServiceStatusView.xaml
+++ b/MiniRisViewer.ServiceStatus/Views/ServiceStatusView.xaml
@@ -41,6 +41,11 @@
                                     Margin="5"
                                     Command="{Binding ImporterStopCommand}"
                                     Content="Stop" />
+                                <Button
+                                    Margin="5"
+                                    Command="{Binding ShowLogCommand}"
+                                    CommandParameter="FileImporter"
+                                    Content="ShowLog" />
                             </StackPanel>
                         </StackPanel>
                     </materialDesign:Card>
