--- a/MiniRisViewer.ServiceStatus/Views/ServiceStatusView.xaml
+++ b/MiniRisViewer.ServiceStatus/Views/ServiceStatusView.xaml
@@ -202,7 +202,7 @@
                 Orientation="Horizontal">
                 <Button
                     Margin="5"
-                    Command="{Binding ReStartServiceCommand}"
+                    Command="{Binding RestartServiceCommand}"
                     Content="全てのサービスを再起動" />
             </StackPanel>
         </DockPanel>
